<resources>
    <string name="app_name">Speech Emotion Recognition</string>
    <string name="timer">00:00</string>
    <string name="quit">Quit</string>
    <string name="filename">Test.wav</string>
    <string name="record">Record</string>
    <string name="information">Information</string>
    <string name="button">Button</string>
    <string name="folder">Folder</string>
    <string name="playstop">PlayStop</string>
    <string name="get_your_emotion">Get Your Emotion</string>
    <string name="recording">RECORDING...</string>
    <string name="emotion">Emotion</string>
</resources>