<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/title_light_shadow"
        style="@style/Widget.Neumorph.TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:clickable="false"
        android:fontFamily="@font/ubuntu"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/shadowColorLight"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/info_btn"
        app:layout_constraintStart_toEndOf="@+id/back_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_dark_shadow"
        style="@style/Widget.Neumorph.TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        android:clickable="false"
        android:fontFamily="@font/ubuntu"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/shadowColorDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/info_btn"
        app:layout_constraintStart_toEndOf="@+id/back_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        style="@style/Widget.Neumorph.TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:fontFamily="@font/ubuntu"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/color_primary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/info_btn"
        app:layout_constraintStart_toEndOf="@+id/back_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <me.bastanfar.semicirclearcprogressbar.SemiCircleArcProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space"
        app:percent="30"
        app:progressBarColor="@color/color_secondary_shade"
        app:progressBarWidth="30"
        app:progressPlaceHolderColor="@color/color_primary"
        app:progressPlaceHolderWidth="20"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/timer_light_shadow"
        style="@style/Widget.Neumorph.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="20dp"
        android:elevation="20dp"
        android:fontFamily="@font/ubuntu"
        android:gravity="center_horizontal|center_vertical"
        android:letterSpacing="0.05"
        android:text="@string/timer"
        android:textAlignment="center"
        android:textColor="@color/shadowColorLight"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/wave_animation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/timer_dark_shadow"
        style="@style/Widget.Neumorph.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:elevation="20dp"
        android:fontFamily="@font/ubuntu"
        android:gravity="center_horizontal|center_vertical"
        android:letterSpacing="0.05"
        android:text="@string/timer"
        android:textAlignment="center"
        android:textColor="@color/shadowColorDark"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/wave_animation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/timer"
        style="@style/Widget.Neumorph.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:elevation="20dp"
        android:fontFamily="@font/ubuntu"
        android:gravity="center_horizontal|center_vertical"
        android:letterSpacing="0.05"
        android:text="@string/timer"
        android:textAlignment="center"
        android:textColor="@color/color_primary"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/wave_animation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <soup.neumorphism.NeumorphImageButton
        android:id="@+id/back_btn"
        style="@style/Widget.Neumorph.ImageButton"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:contentDescription="@string/quit"
        android:padding="20dp"
        android:scaleType="centerInside"
        android:src="@drawable/logout"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title"
        app:neumorph_inset="10dp"
        app:neumorph_lightSource="rightTop"
        app:neumorph_shadowColorDark="@color/shadowColorDark"
        app:neumorph_shadowColorLight="@color/shadowColorLight"
        app:neumorph_shadowElevation="4dp"
        app:neumorph_shapeAppearance="@style/round5"
        app:neumorph_shapeType="basin" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/wave_animation"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/filename_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/wave" />

    <TextView
        android:id="@+id/filename_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/filename"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/rec_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <soup.neumorphism.NeumorphImageButton
        android:id="@+id/rec_btn"
        style="@style/Widget.Neumorph.ImageButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/record"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/submit_btn"
        app:layout_constraintEnd_toStartOf="@+id/play_stop_btn"
        app:layout_constraintStart_toEndOf="@+id/folder_btn"
        app:neumorph_backgroundColor="@color/color_primary"
        app:neumorph_inset="16dp"
        app:neumorph_lightSource="rightTop"
        app:neumorph_shadowColorDark="@color/shadowColorDark"
        app:neumorph_shadowColorLight="@color/shadowColorLight"
        app:neumorph_shadowElevation="10dp"
        app:neumorph_shapeAppearance="@style/round"
        app:neumorph_shapeType="flat" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/play_stop_animation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/play_stop_btn"
        app:layout_constraintEnd_toEndOf="@+id/play_stop_btn"
        app:layout_constraintStart_toStartOf="@+id/play_stop_btn"
        app:layout_constraintTop_toTopOf="@+id/play_stop_btn"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/play_stop" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/mic_animation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/rec_btn"
        app:layout_constraintEnd_toEndOf="@+id/rec_btn"
        app:layout_constraintStart_toStartOf="@+id/rec_btn"
        app:layout_constraintTop_toTopOf="@+id/rec_btn"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/mic" />

    <soup.neumorphism.NeumorphImageButton
        android:id="@+id/info_btn"
        style="@style/Widget.Neumorph.ImageButton"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:contentDescription="@string/information"
        android:padding="20dp"
        android:scaleType="centerInside"
        android:src="@drawable/information"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title"
        app:neumorph_inset="10dp"
        app:neumorph_lightSource="rightTop"
        app:neumorph_shadowColorDark="@color/shadowColorDark"
        app:neumorph_shadowColorLight="@color/shadowColorLight"
        app:neumorph_shadowElevation="4dp"
        app:neumorph_shapeAppearance="@style/round5"
        app:neumorph_shapeType="basin" />


    <soup.neumorphism.NeumorphButton
        android:id="@+id/submit_btn"
        style="@style/Widget.Neumorph.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/ubuntu"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:text="@string/get_your_emotion"
        android:textColor="@color/color_secondary_shade"
        app:drawableEndCompat="@drawable/ic_right"
        app:drawableStartCompat="@drawable/ic_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:neumorph_lightSource="rightTop"
        app:neumorph_shadowColorDark="@color/shadowColorDark"
        app:neumorph_shadowColorLight="@color/shadowColorLight"
        app:neumorph_shadowElevation="4dp" />


    <soup.neumorphism.NeumorphImageButton
        android:id="@+id/folder_btn"
        style="@style/Widget.Neumorph.ImageButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/folder"
        android:padding="17dp"
        android:scaleType="fitCenter"
        android:src="@drawable/folder_open_alt_font_awesome"
        app:layout_constraintBottom_toBottomOf="@+id/rec_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:neumorph_inset="10dp"
        app:neumorph_lightSource="rightTop"
        app:neumorph_shadowColorDark="@color/shadowColorDark"
        app:neumorph_shadowColorLight="@color/shadowColorLight"
        app:neumorph_shadowElevation="4dp"
        app:neumorph_shapeAppearance="@style/round5"
        app:neumorph_shapeType="flat" />

    <soup.neumorphism.NeumorphImageButton
        android:id="@+id/play_stop_btn"
        style="@style/Widget.Neumorph.ImageButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/playstop"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/rec_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:neumorph_inset="10dp"
        app:neumorph_lightSource="rightTop"
        app:neumorph_shadowColorDark="@color/shadowColorDark"
        app:neumorph_shadowColorLight="@color/shadowColorLight"
        app:neumorph_shadowElevation="4dp"
        app:neumorph_shapeAppearance="@style/round5"
        app:neumorph_shapeType="flat" />

    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

</androidx.constraintlayout.widget.ConstraintLayout>